# boxlite

./: README.md
.github/workflows/: README.md  build-node.yml  build-runtime.yml  build-wheels.yml
boxlite/: Cargo.toml  build.rs
boxlite-cli/: Cargo.toml
boxlite-cli/src/: main.rs
boxlite/src/: lib.rs
boxlite/src/litebox/: clone_export.rs  mod.rs
boxlite/src/runtime/: embedded.rs  import.rs  mod.rs
boxlite/tests/: README.md  concurrent_exec.rs  lifecycle.rs  pid_file.rs  shutdown.rs
boxlite/tests/common/: mod.rs
docs/development/: boot-latency-analysis.md
guest/src/service/exec/: executor.rs  mod.rs
make/: build.mk  coverage.mk  dev.mk  dist.mk  quality.mk  test.mk
scripts/: clean.sh
scripts/package/: package-common.sh  package-linux.sh  package-macos.sh
sdks/boxlite-ffi/: Cargo.toml
sdks/c/: Cargo.toml
sdks/c/tests/: CMakeLists.txt
sdks/go/rust/: Cargo.toml
sdks/node/: package.json
sdks/python/: pyproject.toml
sdks/python/tests/: test_concurrent_exec.py
