[project]
name = "boxlite"
version = "0.6.0"
description = "Python bindings for Boxlite runtime"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Dorian Zheng" }]
license = "Apache-2.0"
keywords = ["sandbox", "virtual machine", "vm", "ai agents", "code execution", "isolation", "container", "security", "kvm", "hypervisor"]
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: System :: Emulators",
]

[project.urls]
Homepage = "https://github.com/boxlite-ai/boxlite"
Documentation = "https://github.com/boxlite-ai/boxlite/tree/main/docs"
Repository = "https://github.com/boxlite-ai/boxlite"
Issues = "https://github.com/boxlite-ai/boxlite/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.4"]
sync = ["greenlet>=3.0.0"]
orchestration = ["cloudpickle>=3.0"]

[dependency-groups]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.4"]
sync = ["greenlet>=3.0.0"]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
module-name = "boxlite"

[tool.cibuildwheel]
# https://cibuildwheel.pypa.io/en/stable/options/#archs
# Always build for native architecture (default is "auto" which is same)
archs = ["native"]
# Build for Python 3.10+
# build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = [
    # Skip musllinux since: cannot produce proc-macro for `async-recursion v1.1.1` as
    # the target `aarch64-unknown-linux-musl` does not support these crate types".
    # The dependency is: boxlite → qcow2-rs → async-recursion
    "*-musllinux*",
]


# Build shim and guest binaries before building wheels (runs once per platform).
# Runtime binaries are embedded via include_bytes! (embedded-runtime feature),
# so no runtime directory assembly or copy is needed.
#
# Linux build strategy:
# - Guest binary: Built on Ubuntu host BEFORE container (manylinux lacks musl packages)
# - Shim binary: Built IN container (static musl, needs musl-tools)
# - Libraries: Built IN container from source (libkrun, libkrunfw, etc.)
before-all = ["""
    set -ex

    BOXLITE_ROOT=$(pwd)

    # Restore pre-built binaries if available (from Ubuntu host)
    GUEST_TARGET=$(scripts/util.sh --target)
    if [ -d ".cache/$GUEST_TARGET" ]; then
        echo "Restoring guest cargo cache from .cache/$GUEST_TARGET"
        mkdir -p target
        cp -a ".cache/$GUEST_TARGET" "target/$GUEST_TARGET"
    fi

    SHIM_ARCH=$(uname -m)
    if [ -d ".cache/${SHIM_ARCH}-unknown-linux-musl" ]; then
        echo "Restoring shim cargo cache from .cache/${SHIM_ARCH}-unknown-linux-musl"
        mkdir -p target
        cp -a ".cache/${SHIM_ARCH}-unknown-linux-musl" "target/${SHIM_ARCH}-unknown-linux-musl"
    fi

    make setup

    [ -f "$HOME/.cargo/env" ] && source "$HOME/.cargo/env"

    # Build shim and guest (skip if pre-built via SKIP_*_BUILD)
    # No 'make runtime' needed — embedded-runtime feature handles everything
    make shim guest
    """]

# Test the built wheel (optional, add tests later)
test-command = "python -c 'import boxlite; print(boxlite.__version__)'"

[tool.cibuildwheel.macos]
# Fix "libkrunfw.4.dylib has a minimum target of 14.0" error
environment = { MACOSX_DEPLOYMENT_TARGET = "14.0", _PYTHON_HOST_PLATFORM = "macosx_14_0_arm64", PATH = "$HOME/.cargo/bin:$PATH" }

repair-wheel-command = ""  # Skip auditwheel repair

[tool.cibuildwheel.linux]
# Use manylinux_2_28 which has newer tooling (Make 4.x required for libkrunfw kernel builds)
# Default is manylinux_2_28, but explicit for documentation
# manylinux-x86_64-image = "manylinux_2_28"
# manylinux-aarch64-image = "manylinux_2_28"

# Set Rust and library paths
# SKIP_GUEST_BUILD=1: Use pre-built guest from Ubuntu host (manylinux lacks musl packages)
# SKIP_SHIM_BUILD=1: Use pre-built shim from Ubuntu host
environment = { SKIP_GUEST_BUILD = "1", SKIP_SHIM_BUILD = "1", PATH = "$HOME/.cargo/bin:/usr/local/bin:$PATH", PKG_CONFIG_PATH = "/usr/local/lib64/pkgconfig:/usr/local/lib/pkgconfig", LD_LIBRARY_PATH = "/usr/local/lib64:/usr/local/lib" }

# Retag wheel for PyPI compliance without bundling libs (we handle runtime deps ourselves)
# Uses 'wheel tags' to change linux_x86_64 -> manylinux_2_28_x86_64
repair-wheel-command = "pip install wheel && wheel tags --platform-tag manylinux_2_28_$(uname -m) {wheel} && mv $(dirname {wheel})/*manylinux*.whl {dest_dir}/"
